Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberObjectField.quorum
class Main
    Object v
    action Main
        v:SetValue()
        Test(v)
    end

    action Test(number var)
    end
end
